--- a/src/app/hold/less/hold.less
+++ b/src/app/hold/less/hold.less
@@ -65,12 +65,12 @@
 		    .helvetica-regular;
 		}
 	h1{
-		font-family:helvetica-bold;
+		.helvetica-bold;
 		font-size: 25px;
 		margin:0;
 	}
 	h2{
-		font-family:helvetica-bold;
+		.helvetica-bold;
 		font-size: 15px;
 		padding: 10px;
 		background-color: @color20;
