--- a/src/app/home/templates/home.tpl.html
+++ b/src/app/home/templates/home.tpl.html
@@ -81,7 +81,7 @@
 		<!--Saved Order starts here -->
 		<div class="col-sm-9 saved_order">
 			<h1 class="heading">Saved Orders</h1>
-			<input type="text" ng-model="home.searchText">
+			<input type="text" ng-model="home.searchText" placeholder="Search" class="save-input">
 			<div class="col-sm-12 saved_order_table">
 				<div ui-grid="CSRAdminData" class="order-grid col-md-12 col-sm-12"></div>
 			</div>
