--- a/src/app/orderConfirmation/templates/orderConfirmation.top.tpl.html
+++ b/src/app/orderConfirmation/templates/orderConfirmation.top.tpl.html
@@ -237,13 +237,7 @@
             </div>
             <div class="returnbtn">
 		    	<a href="/home" ui-sref="home">
-					<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-27.9 72.8 42 28" style="enable-background:new -27.9 72.8 42 28;" xml:space="preserve">
-						<text transform="matrix(1 0 0 1 -304 500)" style="font-family:'HelveticaNeue-Bold'; font-size:5px;">Created by Rohith M S</text>
-						<text transform="matrix(1 0 0 1 -304 505)" style="font-family:'HelveticaNeue-Bold'; font-size:5px;">from the Noun Project</text>
-						<g>
-							<path d="M11.9,88.8h-29.5l7.4,7.5l-2.9,2.9l-12.5-12.5l12.5-12.5l2.9,2.9l-7.4,7.5h29.5V88.8z"></path>
-						</g>
-					</svg>
+					<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 14 21" style="enable-background:new 0 0 14 21" xml:space="preserve"><style type="text/css">.st0{fill:#8B8E96;}</style><g><path d="M0.7,18.3l7.8-7.8L0.7,2.7L3,0.3l10.2,10.2L3,20.7L0.7,18.3z"></path></g></svg>
 			  Back To Home</a>
 		    </div>
 		    <div class="pagetitle">
