--- a/src/app/base/less/base.less
+++ b/src/app/base/less/base.less
@@ -1,42 +1,28 @@
 
 @font-face {
-	font-family: "Helvetica-regular";
-  src: url("../fonts/bec9cfcd690948400517b31821c873e1.eot"); /* IE9*/
-  src: url("../fonts/bec9cfcd690948400517b31821c873e1.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-  url("../fonts/bec9cfcd690948400517b31821c873e1.woff2") format("woff2"), /* chrome、firefox */
-  url("../fonts/bec9cfcd690948400517b31821c873e1.woff") format("woff"), /* chrome、firefox */
-  url("../fonts/bec9cfcd690948400517b31821c873e1.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-  url("../fonts/bec9cfcd690948400517b31821c873e1.svg#Helvetica") format("svg"); /* iOS 4.1- */
+	font-family: 'ProximaNova-Bold';
+	src: url('../fonts/30AA64_2_0.eot');
+	src: url('../fonts/30AA64_2_0.eot?#iefix') format('embedded-opentype'), url('../fonts/30AA64_2_0.woff2') format('woff2'), url('../fonts/30AA64_2_0.woff') format('woff'), url('../fonts/30AA64_2_0.ttf') format('truetype');
 }
-
 @font-face {
-font-family: "Helvetica-Bold";
-  src: url("../fonts/01fb79dd6a07ae1c7117bdc6a62e927f.eot"); /* IE9*/
-  src: url("../fonts/01fb79dd6a07ae1c7117bdc6a62e927f.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-  url("../fonts/01fb79dd6a07ae1c7117bdc6a62e927f.woff2") format("woff2"), /* chrome、firefox */
-  url("../fonts/01fb79dd6a07ae1c7117bdc6a62e927f.woff") format("woff"), /* chrome、firefox */
-  url("../fonts/01fb79dd6a07ae1c7117bdc6a62e927f.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-  url("../fonts/01fb79dd6a07ae1c7117bdc6a62e927f.svg#Helvetica-Bold") format("svg"); /* iOS 4.1- */
+	font-family: 'ProximaNova-Light';
+	src: url('../fonts/30AA64_5_0.eot');
+	src: url('../fonts/30AA64_5_0.eot?#iefix') format('embedded-opentype'), url('../fonts/30AA64_5_0.woff2') format('woff2'), url('../fonts/30AA64_5_0.woff') format('woff'), url('../fonts/30AA64_5_0.ttf') format('truetype');
 }
-
 @font-face {
-font-family: "Helvetica Medium";
-  src: url("../fonts/acdf2fe11ffe89af85ebf114a5d81f9a.eot"); /* IE9*/
-  src: url("../fonts/acdf2fe11ffe89af85ebf114a5d81f9a.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-  url("../fonts/acdf2fe11ffe89af85ebf114a5d81f9a.woff2") format("woff2"), /* chrome、firefox */
-  url("../fonts/acdf2fe11ffe89af85ebf114a5d81f9a.woff") format("woff"), /* chrome、firefox */
-  url("../fonts/acdf2fe11ffe89af85ebf114a5d81f9a.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-  url("../fonts/acdf2fe11ffe89af85ebf114a5d81f9a.svg#Helvetica Medium") format("svg"); /* iOS 4.1- */
+	font-family: 'ProximaNova-Regular';
+	src: url('../fonts/30AA64_8_0.eot');
+	src: url('../fonts/30AA64_8_0.eot?#iefix') format('embedded-opentype'), url('../fonts/30AA64_8_0.woff2') format('woff2'), url('../fonts/30AA64_8_0.woff') format('woff'), url('../fonts/30AA64_8_0.ttf') format('truetype');
 }
 
 .helvetica-bold{
-	font-family: "Helvetica-Bold";
+	font-family: 'ProximaNova-Bold';
 }
 .helvetica-regular{
-	font-family: "Helvetica-regular";
+	font-family: 'ProximaNova-Regular';
 }
 .helvetica-medium{
-	font-family: "Helvetica Medium";
+	font-family: 'ProximaNova-Regular';
 }
 @charset "utf-8";
 /* CSS Document */
@@ -315,6 +301,7 @@ input[type=number]::-webkit-outer-spin-button {
 		}
 	}
 }
+
 .search_box {
 	background:@color17;
 	border-radius:4px;
@@ -341,6 +328,8 @@ input[type=number]::-webkit-outer-spin-button {
 			float: right;
 			font-size: 12px;
 			padding-top:2px;
+			.transition-common(all 0.5s ease);
+			.rotate(0deg);
 		}
 		&:hover, &:focus{
 			text-decoration:none;
@@ -363,6 +352,11 @@ input[type=number]::-webkit-outer-spin-button {
 					background-color:@color14;
 				}
 			}
+		}
+	}
+	&.open{
+		.fa-chevron-down{
+			transform:rotate(180deg);
 		}
 	}
 	
@@ -605,6 +599,9 @@ input[type=number]::-webkit-outer-spin-button {
 		    background-color: #e4e6ea;
 		    border-right-color: #fff;
 		}
+		.order-grid .ui-grid-render-container-body .ui-grid-viewport .ui-grid-canvas .ui-grid-row:nth-child(even) .ui-grid-cell{
+			border-bottom:1px solid transparent;
+		}
 	}
 	.saved_order {
 	height:auto;
@@ -612,6 +609,15 @@ input[type=number]::-webkit-outer-spin-button {
 	width:78.2%;
 	.heading{
 		margin: 25px auto 16px;
+	}
+	.save-input{
+		position: absolute;
+	    right: 7px;
+	    border: 1px solid #e4e6ea;
+	    z-index: 1;
+	    top: 70px;
+	    border-radius: 2px;
+	    padding-left: 5px;
 	}
 	.saved_order_table {
 		background:@color0;
@@ -803,7 +809,7 @@ input[type=number]::-webkit-outer-spin-button {
 	border-radius:0;
 	right:0;
 	top:34px;
-	width:425px;
+	width: 100%;
    
 	max-height:400px;
     overflow-y: auto;
@@ -1806,7 +1812,7 @@ input[type=number]::-webkit-outer-spin-button {
     color: #fff;
 }
 
-.back-common{
+/*.back-common{
 	a{
 		position: relative;
 		background-color: @primary-color;
@@ -1838,6 +1844,36 @@ input[type=number]::-webkit-outer-spin-button {
 			}
 		}
 	}
+}*/
+
+
+.back-common{
+	font-family: "Helvetica-regular";
+    font-size: 14px;
+    color: #54565d;
+    margin: 10px 0;
+    a{
+    	color: #54565d;
+	    cursor: pointer;
+	    text-decoration: none;
+		svg{
+	    width: 15px;
+	    height: 10px;
+	    color: rgb(84, 86, 93);
+	    display: inline-block;
+	    transform: rotate(180deg);
+	    }
+    }
+    &:hover{
+    	a{
+    		color:#a77bca;
+    		text-decoration:underline;
+    	}
+    	svg{
+    		fill:#a77bca;
+    	}
+    }
+   
 }
 
 .modal-backdrop{
@@ -1852,4 +1888,112 @@ input[type=number]::-webkit-outer-spin-button {
 	margin:2px 0px;
 	font-size:12px;
 	  font-family: "helvetica-regular";
+}
+.purple-btn {
+    background-color: #a576ca;
+    border: 1px solid #a576ca;
+    color: #fff;
+    padding: 5px 15px;
+    .helvetica-regular;
+    font-size: 16px;
+    cursor: pointer;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    line-height: normal;
+    .background-fade;
+    &:hover {
+        border: 1px solid #7a43a3;
+        color: #fff;
+        background-size: 100% 100%;
+        background-color: #7a43a3;
+    }
+    &:disabled {
+    	opacity: 0.6;
+    	cursor: not-allowed;
+    	&:hover {
+    		background-color: #a576ca;
+    		border-color: #a576ca;
+    	}
+    }
+}
+.gray-btn {
+    background-color: #969696;
+    border: 1px solid #969696;
+    color: #fff;
+    padding: 5px 15px;
+    .helvetica-regular;
+    font-size: 16px;
+    cursor: pointer;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    line-height: normal;
+    .background-fade;
+    &:hover {
+        border: 1px solid #696969;
+        color: #fff;
+        background-size: 100% 100%;
+        background-color: #696969;
+    }
+    &:disabled {
+    	opacity: 0.6;
+    	cursor: not-allowed;
+    	&:hover {
+    		background-color: #969696;
+    		border-color: #969696;
+    	}
+    }
+}
+.green-btn {
+    color: #fff;
+    border: 1px solid #afd833;
+    background-color: #afd833;
+    cursor: pointer;
+    padding: 5px 15px;
+    .background-fade;
+    .helvetica-regular;
+    font-size: 16px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    line-height: normal;
+    &:hover {
+    	border: 1px solid #8dbb01;
+        color: #fff;
+        background-size: 100% 100%;
+        background-color: #8dbb01;
+    }
+    &:disabled {
+    	opacity: 0.6;
+    	cursor: not-allowed;
+    	&:hover {
+    		background-color: #afd833;
+    		border-color: #afd833;
+    	}
+    }
+}
+.lightgray-btn {
+	background-color: #f3f3f3;
+    .background-fade;
+    .helvetica-regular;
+    font-size: 16px;
+    color: #464646;
+    border: 1px solid #f3f3f3;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    line-height: normal;
+    cursor: pointer;
+    padding: 5px 15px;
+    &:hover {
+    	background-color: #ddd;
+	    color: #8c58b5;
+	    border-color: #ddd;
+        background-size: 100% 100%;
+    }
+    &:disabled {
+    	opacity: 0.6;
+    	cursor: not-allowed;
+    	&:hover {
+    		background-color: #f3f3f3;
+    		border-color: #f3f3f3;
+    	}
+    }
 }
