--- a/src/app/buildOrder/templates/buildOrder.pdp.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.pdp.tpl.html
@@ -44,9 +44,10 @@
 						</ul>
 					</div>
 					<div class="productdescp">
-						<h1>Description:</h1>
-						<p>{{buildOrder.prodDesription}}</p>
-						<span>View More +</span>
+						<h1 class="title">Description:</h1>
+						<p class="desc-text" ng-class="{expanded:expandDesc == true}">{{buildOrder.prodDesription}}</p>
+						<span class="view-more-link" ng-show="!expandDesc" ng-click="expandDesc=!expandDesc">View More +</span>
+						<span class="view-more-link" ng-show="expandDesc" ng-click="expandDesc=!expandDesc">View Less -</span>
 					</div>
 				</div>
 				<div class="pdp-right col-md-5 col-lg-5">
@@ -274,7 +275,9 @@
 							<h5>Check Availability</h5>
 							<div class="side-block">
 								<p>Zip Code <span class="star">*</span></p>
-								<input type="number" ng-model="buildOrder.ZipCodeCheck" ng-blur="buildOrder.GetMinDays(buildOrder.ZipCodeCheck, prods.data.ID)" placeholder="Zip Code" />
+								<form name="ZipChecker" ng-submit="buildOrder.RemoveZipBlur(buildOrder.selectedProductId)">
+									<input type="number" id="ZipCodeCheck" ng-model="buildOrder.ZipCodeCheck" ng-blur="buildOrder.GetMinDays(buildOrder.ZipCodeCheck, prods.data.ID)" placeholder="Zip Code" />
+								</form>
 							</div>
 							<div class="side-block" ng-if="buildOrder.MultipleCities.length <= 1 || !buildOrder.MultipleCities">
 								<p>City <span class="star">*</span></p>
@@ -297,7 +300,7 @@
 							<div class="side-block">
 								<p>Delivery Date <span class="star">*</span></p>
 								<div class="input-group">
-									<input type="text" name="checkDate" readonly class="form-control" placeholder="MM/DD/YYYY" uib-datepicker-popup="MM/dd/yyyy" ng-model="buildOrder.checkDate" is-open="buildOrder.checkDateCalenderPopUp" datepicker-options="{formatYear: 'yy', minDate: buildOrder.MinDate, startingDay: 1}" ng-change="buildOrder.CalendarSelect(buildOrder.checkDate, buildOrder.selectedProductId)" />
+									<input type="text" name="checkDate" readonly class="form-control" placeholder="MM/DD/YYYY" uib-datepicker-popup="MM/dd/yyyy" ng-model="buildOrder.checkDate" is-open="buildOrder.checkDateCalenderPopUp" datepicker-options="{formatYear: 'yy', minDate: buildOrder.MinDate, startingDay: 0, dateDisabled:buildOrder.disabledDates}" ng-change="buildOrder.CalendarSelect(buildOrder.checkDate, buildOrder.selectedProductId)" />
 									<span class="input-group-btn">
 										  <button type="button" class="btn btn-default" ng-click="buildOrder.checkDateCalenderPopUp=!buildOrder.checkDateCalenderPopUp">
 											<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -524,9 +527,9 @@
 							<div class="pdp-upsell-block" ng-click="buildOrder.UpsellProductItem(upsell, buildOrder.CategoryItemsUpsell[$index], $index)">
 								<div class="product_img"><img ng-src="{{buildOrderPDP.alfrescoAccessURL}}/imagefinder/{{upsell.ID}}?alf_ticket={{buildOrderPDP.alfticket}}" class="owl-lazy"></div>
 								<h2>{{upsell.Name}}</h2>
-								<h3>SKU #{{upsell.ID}}</h3>
+								<h3>SKU <span>#{{upsell.ID}}</span></h3>
 								<h3>{{upsell.Size}}</h3>
-								<h4>{{upsell.Color}}</h4>
+								<h4><span>{{upsell.Color}}</span></h4>
 								<div class="price_lst">
 									<h5>{{upsell.Price | currency}}</h5>
 								</div>
