--- a/src/app/home/less/home.less
+++ b/src/app/home/less/home.less
@@ -1770,8 +1770,12 @@ be a descendant of the grid when it is being dragged.
 					}
 				}
 			}
+			.fc-title{
+				cursor:pointer;
+			}
 		}	
 }
+
 
 
 
